Add enum utilities and binary reader
EnumValue<T>(T v) returns the underlying integral value of an enum value. EnumCount<T>() is a constexpr function which returns the number of values within an enum. The values must be contiguous and start at 0. IterateEnum<T>() is used to iterate all enum values in a range-based for loop.

The binary reader provides simple functions to deserialize simple data types (s32, f64, etc.) from a byte array.

--- a/Foundation/Foundation.vcxproj
+++ b/Foundation/Foundation.vcxproj
@@ -60,6 +60,7 @@
     <ClCompile Include="Core\Coerce.ixx" />
     <ClCompile Include="Core\Concepts.ixx" />
     <ClCompile Include="Core\Core.ixx" />
+    <ClCompile Include="Core\Enum.ixx" />
     <ClCompile Include="Core\FloatTraits.ixx" />
     <ClCompile Include="Core\ConstevalSafeCast.ixx" />
     <ClCompile Include="Foundation.ixx" />
@@ -104,6 +105,7 @@
     <ClCompile Include="Text\String.ixx" />
     <ClCompile Include="Text\Text.ixx" />
     <ClCompile Include="Utilities\Alignment.ixx" />
+    <ClCompile Include="Utilities\BinaryReader.ixx" />
     <ClCompile Include="Utilities\BitOperations.ixx" />
     <ClCompile Include="Utilities\Copy.ixx" />
     <ClCompile Include="Utilities\Bounds.ixx" />
