--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -57,6 +57,22 @@
     <ClCompile Include="Native\Native.ixx" />
     <ClCompile Include="Native\NativeLibraryRegistry.cpp" />
     <ClCompile Include="Native\NativeLibraryRegistry.ixx" />
+    <ClCompile Include="Program\Program.cpp" />
+    <ClCompile Include="Program\Program.ixx" />
+    <ClCompile Include="Program\ProgramGraph.ixx" />
+    <ClCompile Include="Program\ProgramGraphNodes\ArrayProgramGraphNode.ixx" />
+    <ClCompile Include="Program\ProgramGraphNodes\ConstantProgramGraphNode.ixx" />
+    <ClCompile Include="Program\ProgramGraphNodes\GraphInputProgramGraphNode.ixx" />
+    <ClCompile Include="Program\ProgramGraphNodes\GraphOutputProgramGraphNode.ixx" />
+    <ClCompile Include="Program\ProgramGraphNodes\IInputProgramGraphNode.ixx" />
+    <ClCompile Include="Program\ProgramGraphNodes\InputProgramGraphNode.ixx" />
+    <ClCompile Include="Program\ProgramGraphNodes\IOutputProgramGraphNode.ixx" />
+    <ClCompile Include="Program\ProgramGraphNodes\IProcessorProgramGraphNode.ixx" />
+    <ClCompile Include="Program\ProgramGraphNodes\IProgramGraphNode.ixx" />
+    <ClCompile Include="Program\ProgramGraphNodes\NativeModuleCallProgramGraphNode.ixx" />
+    <ClCompile Include="Program\ProgramGraphNodes\OutputProgramGraphNode.ixx" />
+    <ClCompile Include="Program\ProgramGraphNodes\ProgramGraphNodes.ixx" />
+    <ClCompile Include="Program\ProgramVariantProperties.ixx" />
     <ClCompile Include="Reporting\IReporting.ixx" />
     <ClCompile Include="Reporting\Reporting.ixx" />
     <ClCompile Include="Reporting\ReportingExtensions.ixx" />
