Add HashSet and HashMap data structures
Additionally, I have changed most instances of std::is_copy/move_constructible/assignable_v to just std::copyable and std::movable for simplicity.

--- a/Foundation/Foundation.vcxproj
+++ b/Foundation/Foundation.vcxproj
@@ -52,6 +52,8 @@
     <ClCompile Include="Containers\BoundedArray.ixx" />
     <ClCompile Include="Containers\Containers.ixx" />
     <ClCompile Include="Containers\FixedArray.ixx" />
+    <ClCompile Include="Containers\HashMap.ixx" />
+    <ClCompile Include="Containers\HashSet.ixx" />
     <ClCompile Include="Containers\ResizableArrayBase.ixx" />
     <ClCompile Include="Containers\Span.ixx" />
     <ClCompile Include="Containers\UnboundedArray.ixx" />
