--- a/Foundation/Foundation.vcxproj.filters
+++ b/Foundation/Foundation.vcxproj.filters
@@ -213,6 +213,12 @@
     <ClCompile Include="Utilities\Sha256.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Containers\HashSet.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Containers\HashMap.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Core\Assert.Macros.h">
