Add unit tests for HashSet and HashMap and fix various bugs
It turns out that std::hash is not constexpr so I added a function CalculateHashKey which is to be overloaded for every type which can act as a hash set/map key.

--- a/Foundation/Foundation.vcxproj
+++ b/Foundation/Foundation.vcxproj
@@ -113,6 +113,7 @@
     <ClCompile Include="Utilities\Bounds.ixx" />
     <ClCompile Include="Utilities\DisallowAllocationScope.ixx" />
     <ClCompile Include="Utilities\Guid.ixx" />
+    <ClCompile Include="Utilities\HashKey.ixx" />
     <ClCompile Include="Utilities\Sha256.cpp" />
     <ClCompile Include="Utilities\Sha256.ixx" />
     <ClCompile Include="Utilities\Unroll.ixx" />
