Start to add the core engine, ProgramProcessor
This is a large change. The ProgramProcessor class is responsible managing buffers and executing native module call tasks within the task system. At a high level, this class instantiates tasks for each native module call node (one per voice in the voice graph), assigns buffers to each input/output argument of each task, and manages task dependencies so that tasks are kicked off when all input data becomes available. Currently, task setup and buffer management has been written but code relating to dependencies and task submission is not yet present. ProgramProcessor uses the following helper classes:

ConstantManager: this class is responsible for maintaining constant values, including string memory and constant arrays. These constants are automatically de-duplicated to reduce memory usage (e.g. if the array [1, 2, 3] is used, it is only allocated once).

BufferManager: this is a fairly complex class which manages the underlying buffer memory. When possible, buffer memory will be shared in cases where two buffers can never be in use concurrently. To assign buffers, the buffer manager first builds up a list of all buffers as if no memory was being shared. Then, the caller declares which buffers may be concurrent with each other, and the buffer manager creates shared memory groups for buffers of the same size using a simple greedy merging algorithm. Additionally, unless explicitly denied by the native module specification, buffers which are only used as a single input to a single task may be shared with output buffers in that same task.

Other minor changes:
- Instrument properties are now included on the serialized program so that values like the max voice count are accessible
- Voice-to-effect primitive types are explicitly declared in the program graph as deriving them from output nodes was annoying, and if we choose to support upsampled voice-to-effect types in the future, the derivation of the data type would be impos

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -50,6 +50,7 @@
   <ImportGroup Label="ExtensionTargets" />
   <ItemGroup>
     <ClInclude Include="Macros.h" />
+    <ClInclude Include="ProgramProcessing\BufferGuards.h" />
     <ClInclude Include="WindowsHeaders.h" />
   </ItemGroup>
   <ItemGroup>
@@ -57,6 +58,17 @@
     <ClCompile Include="Native\Native.ixx" />
     <ClCompile Include="Native\NativeLibraryRegistry.cpp" />
     <ClCompile Include="Native\NativeLibraryRegistry.ixx" />
+    <ClCompile Include="ProgramProcessing\BufferManager.cpp" />
+    <ClCompile Include="ProgramProcessing\BufferManager.ixx" />
+    <ClCompile Include="ProgramProcessing\BufferMemory.ixx" />
+    <ClCompile Include="ProgramProcessing\ConstantManager.cpp" />
+    <ClCompile Include="ProgramProcessing\ConstantManager.ixx" />
+    <ClCompile Include="ProgramProcessing\ProgramGraphUtilities.cpp" />
+    <ClCompile Include="ProgramProcessing\ProgramGraphUtilities.ixx" />
+    <ClCompile Include="ProgramProcessing\ProgramProcessing.ixx" />
+    <ClCompile Include="ProgramProcessing\ProgramProcessor.cpp" />
+    <ClCompile Include="ProgramProcessing\ProgramProcessor.ixx" />
+    <ClCompile Include="Program\InstrumentProperties.ixx" />
     <ClCompile Include="Program\Program.cpp" />
     <ClCompile Include="Program\Program.ixx" />
     <ClCompile Include="Program\ProgramGraph.ixx" />
