Move foundation unit tests into sub-folder and fix a few constexpr bugs

--- a/NativeTests/NativeTests.vcxproj
+++ b/NativeTests/NativeTests.vcxproj
@@ -54,34 +54,34 @@
   <ItemGroup>
     <ClCompile Include="ConsoleCommand.cpp" />
     <ClCompile Include="ConsoleCommand.ixx" />
-    <ClCompile Include="Containers\BoundedArray.cpp" />
-    <ClCompile Include="Containers\FixedArray.cpp" />
-    <ClCompile Include="Containers\HashMap.cpp" />
-    <ClCompile Include="Containers\HashSet.cpp" />
-    <ClCompile Include="Containers\UnboundedArray.cpp" />
-    <ClCompile Include="Core\Enum.cpp" />
-    <ClCompile Include="Functional\Callable.cpp" />
-    <ClCompile Include="Math\MathFunctions.cpp" />
-    <ClCompile Include="Math\Simd.cpp" />
+    <ClCompile Include="Foundation\Containers\BoundedArray.cpp" />
+    <ClCompile Include="Foundation\Containers\FixedArray.cpp" />
+    <ClCompile Include="Foundation\Containers\HashMap.cpp" />
+    <ClCompile Include="Foundation\Containers\HashSet.cpp" />
+    <ClCompile Include="Foundation\Containers\Span.cpp" />
+    <ClCompile Include="Foundation\Containers\UnboundedArray.cpp" />
+    <ClCompile Include="Foundation\Core\Coerce.cpp" />
+    <ClCompile Include="Foundation\Core\Enum.cpp" />
+    <ClCompile Include="Foundation\Core\NullTerminatedString.cpp" />
+    <ClCompile Include="Foundation\Functional\Callable.cpp" />
+    <ClCompile Include="Foundation\Math\MathFunctions.cpp" />
+    <ClCompile Include="Foundation\Math\Simd.cpp" />
+    <ClCompile Include="Foundation\Text\Format.cpp" />
+    <ClCompile Include="Foundation\Text\String.cpp" />
+    <ClCompile Include="Foundation\Utilities\Alignment.cpp" />
+    <ClCompile Include="Foundation\Utilities\BitOperations.cpp" />
+    <ClCompile Include="Foundation\Utilities\Bounds.cpp" />
+    <ClCompile Include="Foundation\Utilities\Copy.cpp" />
+    <ClCompile Include="Foundation\Utilities\Sha256.cpp" />
+    <ClCompile Include="Foundation\Utilities\Unroll.cpp" />
     <ClCompile Include="TestUtilities\ObjectWithConstructorArguments.ixx" />
     <ClCompile Include="TestUtilities\ResizableArrayBaseTests.ixx" />
-    <ClCompile Include="Containers\Span.cpp" />
-    <ClCompile Include="Core\Coerce.cpp" />
-    <ClCompile Include="Core\NullTerminatedString.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Text\String.cpp" />
     <ClCompile Include="Test.cpp" />
     <ClCompile Include="Test.ixx" />
     <ClCompile Include="TestUtilities\MovableObject.ixx" />
-    <ClCompile Include="Text\Format.cpp" />
-    <ClCompile Include="Utilities\Alignment.cpp" />
     <ClCompile Include="Tests.ixx" />
-    <ClCompile Include="Utilities\BitOperations.cpp" />
-    <ClCompile Include="Utilities\Bounds.cpp" />
-    <ClCompile Include="Utilities\Copy.cpp" />
     <ClCompile Include="TestUtilities\SimdTest.ixx" />
-    <ClCompile Include="Utilities\Sha256.cpp" />
-    <ClCompile Include="Utilities\Unroll.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros.h" />
