--- a/Foundation/Foundation.vcxproj.filters
+++ b/Foundation/Foundation.vcxproj.filters
@@ -222,6 +222,9 @@
     <ClCompile Include="Utilities\HashKey.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Containers\Initializers.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Core\Assert.Macros.h">
